--- a/index.html
+++ b/index.html
@@ -6,19 +6,34 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+
 	<title></title>
 </head>
 <body>
-	<input type="date">
-	<select id="my_select">
-		<option value="A">請選擇類別</option>
-		<option value="B">帳號</option>
-		<option value="C">密碼</option>
-		<option value="D">食物</option>
-		<option value="E">交通</option>
-	</select> 
-	<button type="button" id="submit" class="btn btn-success">submit</button>
-
+	<div class="container">
+		<h1>新增支出</h1>
+		<div class="row">	
+	        <h5>日期</h5>
+			<input type="date" id="date">    </div>		
+			    <div class="row">
+	        <h5>項目</h5>
+			<select id="my_select">
+				<option value="未選擇類別">請選擇類別</option>
+				<option value="food">食物</option>
+				<option value="transportation">交通</option>
+				<option value="writing">文具</option>
+			</select> 
+	    </div>
+	    <div class="row"> 	
+	        <h5>金錢</h5>
+	        <input type="text" id="Money">
+	    </div>
+	    <br>
+	    <div class="row">	
+	        <button type="button" id="submit" class="btn btn-success">submit</button>
+	    </div>
+    </div>
 	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
