--- a/add.html
+++ b/add.html
@@ -6,30 +6,35 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/add10data.css">
+	<link rel="stylesheet" type="text/css" href="css/add.css">
 
 	<title></title>
 </head>
 <body>
-    <div class="container main">
-        <div class="row title">
-            	<h1>查詢近十筆資料</h1>
-        </div>
-        <div class="row"  >
-            <table class="table table-bordered table-striped" >
-                <thead>
-                    <tr>
-                        <td>#</td>
-                        <td>日期</td>
-                        <td>種類</td>
-                        <td>金額</td>                         
-                    </tr>
-                </thead>
-                <tbody id="myTbody">
-                </tbody>
-            </table>
-        </div>
+	<div class="container">
+		<h1>新增支出</h1>
+		<div class="row">	
+	        <h4>日期</h4>
+			<input type="date" id="date">
+		</div>		
+			    <div class="row">
+	        <h4>項目</h4>
+			<select id="my_select">
+				<option value="未選擇類別">請選擇類別</option>
+				<option value="food">食物</option>
+				<option value="transportation">交通</option>
+				<option value="writing">文具</option>
+			</select> 
+	    </div>
+	    <div class="row"> 	
+	        <h4>金錢</h4>
+	        <input type="text" id="Money">
+	    </div>
+	    <br>
+	    <div class="row">	
+	        <button type="button" id="submit" class="btn btn-success">提交</button>
+	    </div>
     </div>
-    <script type="text/javascript" src="js/add.js"></script>
+	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
