--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<script type="text/javascript" src="js/fdb-all.js"></script>
 	<script type="text/javascript" src="js/jquery.js"></script>
@@ -8,32 +9,22 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
-	<title></title>
+	<title>首頁</title>
 </head>
 <body>
-	<div class="container">
-		<h1>新增支出</h1>
-		<div class="row">	
-	        <h5>日期</h5>
-			<input type="date" id="date">    </div>		
-			    <div class="row">
-	        <h5>項目</h5>
-			<select id="my_select">
-				<option value="未選擇類別">請選擇類別</option>
-				<option value="food">食物</option>
-				<option value="transportation">交通</option>
-				<option value="writing">文具</option>
-			</select> 
-	    </div>
-	    <div class="row"> 	
-	        <h5>金錢</h5>
-	        <input type="text" id="Money">
-	    </div>
-	    <br>
-	    <div class="row">	
-	        <button type="button" id="submit" class="btn btn-success">submit</button>
-	    </div>
+    <div class="container">
+        <div class="row">
+            <a href="./add.html" class="btn btn-success">新增資料</a>         
+        </div>
+
+        <div class="row">
+            <a href="./findData.html" class="btn btn-success">查詢資料</a>              
+        </div>
+        
+        <div class="row">
+            <a href="./find10data.html" class="btn btn-success">查詢最近五項</a>     
+        </div>
     </div>
-	<script type="text/javascript" src="main.js"></script>
+
 </body>
 </html>
